# Code-Warehouse

./: README.md
C programming Stuff/: ansi C notes.txt
Liebovitch/: 2 obj_plain_html.html  MAP3_1REPORT.pptx  MAP3_1REPORT.xml  slide1.xml  slide2.xml  wholePage_html.html
Liebovitch/CLD_Parser/: Untitled.ipynb  connectionmatrix.txt  lil more complex.xml  more complex.pptx  parser.py  slide2.xml  test.py  testParser.py  to do.txt
books/general/: Norman, Donald A The design of everyday things.epub
books/java/: Joshua Bloch Effective Java.mobi
google-python-exercises/: JDK 8 Update 131
stuff from college/CS361 Numerical Methods/: 23083677_Qiman_wang_cs361_hw2b.docx  23083677_Qiman_wang_cs361_hw2b_bionomial_coefficent_only.docx  CMakeLists.txt
stuff from college/CS361 Numerical Methods/CS361_hw/: hw_1_1_gcd.cpp  hw_1_2_dec_hex.cpp  hw_2_1_Fib.cpp  hw_2_2_exp_sum_horners_rule.cpp  hw_2_3_binomial_coefficent.cpp  hw_2_4_bisection.cpp  hw_5_2_logarithmic_difference.cpp  hw_5_5_call_option.cpp  hw_6_integration.cpp  main.cpp  useful.txt
stuff from college/CS361 Numerical Methods/cs361_hw doc/: 23083677_Qiman_wang_cs361_hw2b.docx
stuff from college/CS361 Numerical Methods/cs361_hw doc/hw5 latex/: hw-lec5.tex
stuff from college/CS365 Computational Finance/: CMakeLists.txt
stuff from college/CS365 Computational Finance/CS365_hw/: hw_1_1_futures_value.cpp  hw_1_2_discount_factor.cpp  hw_1_3_bond_price_from_yield.cpp  hw_1_4_yield_from_bond_price.cpp  main.cpp
stuff from college/CS365 Computational Finance/hw_doc/: 23083677_QIMAN_WANG_CS365_hw1a.docx
(+425 files in other folders)
